3.9.3/_sources/gallery/lines_bars_and_markers/capstyle.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines_bars_and_markers/capstyle.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. meta::
        :keywords: codex

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_lines_bars_and_markers_capstyle.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_capstyle.py:


=========
CapStyle
=========

The `matplotlib._enums.CapStyle` controls how Matplotlib draws the two
endpoints (caps) of an unclosed line. For more details, see the
`~matplotlib._enums.CapStyle` docs.

.. GENERATED FROM PYTHON SOURCE LINES 10-17



.. image-sg:: /gallery/lines_bars_and_markers/images/sphx_glr_capstyle_001.png
   :alt: Cap style
   :srcset: /gallery/lines_bars_and_markers/images/sphx_glr_capstyle_001.png, /gallery/lines_bars_and_markers/images/sphx_glr_capstyle_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. code-block:: Python


    import matplotlib.pyplot as plt

    from matplotlib._enums import CapStyle

    CapStyle.demo()
    plt.show()


.. _sphx_glr_download_gallery_lines_bars_and_markers_capstyle.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: capstyle.ipynb <capstyle.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: capstyle.py <capstyle.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: capstyle.zip <capstyle.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
